# GIFStream

./: .gitignore  README.md  flake.nix  pyproject.toml  setup.py
dataset_process/: n3d_video_process.py
examples/: requirements.txt  simple_trainer.py  simple_trainer_GIFStream.py  summary.py  utils.py
examples/benchmarks/: multigop_gifstream.sh
examples/datasets/: GIFStream.py  GIFStream_new.py  colmap.py
examples/helper/STG/: camera_utils.py  cameras.py  dataset_readers.py  general_utils.py  helper_model.py  posetrace_utils.py  time_utils.py
examples/helper/ges_tm/: decoder.cfg  encoder_r04.cfg  encoder_r05.cfg  encoder_r06.cfg  encoder_r07.cfg  encoder_r08.cfg  post_process_gaussian.py  pre_process_gaussian.py
examples/helper/mpeg_gsc/: gsc_metric.py
gsplat/: __init__.py  rendering.py
gsplat/compression/: __init__.py  gifstream_2dcodec_compression.py  gifstream_end2end_compression.py  hevc_compression.py  outlier_filter.py  png_compression.py  sort.py  stream_helper.py
gsplat/compression_simulation/: __init__.py  ada_mask.py  entropy_model.py  gaussian_distribution_model.py  ops.py  simulation.py
gsplat/strategy/: GIFStream.py  __init__.py  ops.py
