[project]
name = "GIFStream"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
  "imageio[ffmpeg]>=2.37.0",
  "jaxtyping>=0.3.2",
  "matplotlib>=3.10.3",
  "natsort>=8.4.0",
  "nerfview>=0.1.3",
  "numpy<2",
  "opencv-python-headless>=4.11.0.86",
  "pillow>=11.2.1",
  "plas",
  "pycolmap>=3.11.1",
  "pyyaml>=6.0.2",
  "scikit-learn>=1.7.0",
  "splines>=0.3.3",
  "tensorboard>=2.19.0",
  "tensorly>=0.9.0",
  "torch==2.7.1+cu128",
  "torchmetrics[image]>=1.7.3",
  "torchvision==0.22.1+cu128",
  "tqdm>=4.67.1",
  "tyro>=0.9.24",
  "viser>=0.2.23",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
with-torch = ["torch-scatter>=2.1.2", "fused_ssim", "gridencoder"]

[tool.uv.sources]
gifstream = {path = ".", editable = true}
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
plas = { git = "https://github.com/fraunhoferhhi/PLAS.git" }
fused_ssim = { git = "https://github.com/rahul-goel/fused-ssim" }
pycolmap = { git = "https://github.com/JasonLSC/pycolmap.git" }
gridencoder = { path = "third_party/gridencoder" }

[tool.uv]
no-build-isolation-package = ["gifstream", "torch_scatter", "fused_ssim", "gridencoder"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
